err/enpraxis.staticsite.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/enpraxis'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/browser'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/docs'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/docs/images'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/docs/src'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/i18n'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/af'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/af/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/ar'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/ar/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/bn'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/bn/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/ca'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/ca/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/de'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/en'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/es'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/fr'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/hi'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/hi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/hu'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/hu/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/it'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/ja'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/ko'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/ko/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/ne'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/ne/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/nl'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/pt'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/pt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/pt-br'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/pt-br/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/ru'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/tr'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/tr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/vi'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/vi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/zh'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/zh/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/zh-cn'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/zh-cn/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/zh-hk'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/zh-hk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/zh-tw'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/locales/zh-tw/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/profiles'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/profiles/default'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/tests'...
Listing './lib/python3.5/site-packages/enpraxis/staticsite/utilities'...
Compiling './lib/python3.5/site-packages/enpraxis/staticsite/utilities/staticsiteutility.py'...
***   File "./lib/python3.5/site-packages/enpraxis/staticsite/utilities/staticsiteutility.py", line 216
    except HTTPError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/enpraxis.staticsite-2.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
